--- a/css/Formations.css
+++ b/css/Formations.css
@@ -4,7 +4,7 @@ body {
   }
 
   .titre {
-    background-color: rgba(0, 0, 0, 0.438);
+    background-color: rgb(0, 0, 0);
     background-image: url(../images/Arriereplan/arriereplan.jpg);
     padding: 5%;
   }
