--- a/css/Compétences.css
+++ b/css/Compétences.css
@@ -50,7 +50,7 @@ body {
   .logos {
       
     display: grid;
-      grid-template-columns: auto auto auto auto;
+      grid-template-columns: auto auto auto auto auto;
       padding: 2%;
       padding-left: 10%;
       margin-top: 1%;
