--- a/css/Realisation.css
+++ b/css/Realisation.css
@@ -257,3 +257,13 @@ img.hover-shadow {
   padding-left: 5%;
   padding-bottom: 5%;
 }
+
+.Webinfo{
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
+
+.bddinfo{
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
