--- a/css/index.css
+++ b/css/index.css
@@ -4,19 +4,21 @@ body {
   }
 
   .titre {
-    background-color: rgba(0, 0, 0, 0.438);
+    background-color: rgba(0, 0, 0, 0.719);
     background-image: url(../images/Arriereplan/background.png);
+    background-size: 100% 100%;
     padding: 10%;
   }
+  
 
   .titre h1 {
-    color:white;
+    color:rgb(0, 0, 0);
     text-align: center;
     font-size: 200%;
   }
 
   .titre h2 {
-    color:white;
+    color:rgb(0, 0, 0);
     text-align: center;
     font-size: 100%;
     padding-bottom: 3%;
